    as a parameter, over-riding those set in the field.
 * Added a final method to fields to indicate they are cached and should not
    be modified. Causes an error if a property is set on a finalised field.
 * DefaultXML import now removes tmp files after each item, rather than 
    waiting until the end.
 * Input plugins now output more information if noise is set.
 * field_from_config_string now only clones the field if render_opts was set.
 * Updated the POD for bin/indexer
 * The indexer now rolls the logs once per day.
 * Cleaned up the non-daemon mode of the indexer.
 * import_subjects had an import_bool which needed to be changed to 
    input_confirm .
 * Minor tweaks to import_test_data

2006-03-06 cjg

 * Renamed get_db to get_database
 * Rewrote ->error() as ->error

2006-03-11 tmb

 * Added EndNote Input plugin

2006-03-14 cjg

 * Deprecated create class method on dataobj's in favour of the create_object
    method on $dataset (which could do with renaming).
 * Fixed a bug in the validate subject id method.
 * Cleaned up some variable names and calls to create.

2006-03-15 cjg

 * Removed render_opts property. Each render_opt becomes a property in its
    own right. Closes #1989.

2006-03-16 cjg
 
 * Added an XML tidy method to produce indented XML.

2006-03-21 tdb

 * Removed METS test plugin (no relevant profile for eprints)
 * Added Dissertation ContextObject support
 * Few fixes to OpenURL Output
 * Added ContextObject to OAI outputs

2006-03-21 cjg

 * Changed dates (and times) to use INT's with NULL indicating an unknown value.

2006-03-21 cjg

 * Updated bin/upgrade to get more of the way from 2.3 to the next release. Not
    quite there yet. 

2006-03-22 cjg

 * Moved around Output::ContextObject - made it a little easier to understand.

2006-03-22 cjg
 
 * Added an error if the dataset is requested from an eprint with no eprint_status 
 * Added HTML and ASCII output plugins